<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:id="@+id/cv"
    android:layout_margin="16dp"
    android:background="@drawable/border_larg"
    app:cardCornerRadius="10dp"
    app:cardElevation="4dp"
    tools:context=".Activity.Login_Register.LoginActivity"
    tools:ignore="VectorDrawableCompat">

    <ProgressBar
        android:id="@+id/progressCircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_4ssp"
            android:text="@string/enter_email_address"
            android:textColor="@color/LigtGreen"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username_example_com"
            android:paddingStart="@dimen/_8sdp"
            android:paddingEnd="@dimen/_8sdp"
            app:boxStrokeColor="@color/LigtGreen"
            app:startIconCheckable="true"
            app:startIconDrawable="@drawable/ic_person"
            app:endIconMode="clear_text"
            app:startIconTint="@color/LigtGreen"
            app:hintTextColor="@color/colorBlueDark">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                tools:ignore="TextContrastCheck,TextContrastCheck,SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:padding="16dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btRecover"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:layout_weight="1"
                android:background="@drawable/bt_uidesign"
                android:text="@string/recover"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/cv"
                app:layout_constraintEnd_toStartOf="@id/btCancel"
                app:layout_constraintStart_toStartOf="@id/cv"
                app:layout_constraintTop_toBottomOf="@id/cv"
                tools:ignore="MissingConstraints,TextContrastCheck,TextContrastCheck" />

            <Button
                android:layout_gravity="end"
                android:id="@+id/btCancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/cancel"
                app:layout_constraintTop_toBottomOf="@id/cv"
                app:layout_constraintStart_toEndOf="@id/btRecover"
                app:layout_constraintEnd_toEndOf="@id/cv"
                app:layout_constraintBottom_toBottomOf="@id/cv"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:textStyle="bold"
                tools:ignore="MissingConstraints"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>

    <!--

    </androidx.cardview.widget.CardView>-->
