<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Activity.Login_Register.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/_120sdp"
            android:layout_height="@dimen/_120sdp"
            android:contentDescription="@string/todo"
            android:src="@drawable/doctor_m"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias=".07"
            tools:ignore="MissingConstraints,ImageContrastCheck" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Login"
            android:textColor="@color/colorGray"
            android:textSize="@dimen/_46ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo"
            app:layout_constraintVertical_bias=".01"
            tools:ignore="MissingConstraints" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_8sdp"
            app:cardElevation="@dimen/_4sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias=".01"
            tools:ignore="MissingConstraints">

            <ProgressBar
                android:id="@+id/progressCircle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@id/cv"
                app:layout_constraintEnd_toEndOf="@id/cv"
                app:layout_constraintStart_toStartOf="@id/cv"
                app:layout_constraintTop_toTopOf="@id/cv"
                tools:ignore="MissingConstraints" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4ssp"
                    android:text="@string/Email"
                    android:textColor="@color/LigtGreen"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username_example_com"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    app:boxStrokeColor="@color/LigtGreen"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/LigtGreen"
                    app:endIconMode="clear_text"
                    app:hintTextColor="@color/colorBlueDark">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        tools:ignore="TextContrastCheck,TextContrastCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_4sdp"
                    android:text="@string/Password"
                    android:textColor="@color/LigtGreen"
                    android:textSize="@dimen/_16ssp"
                    android:textStyle="bold"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/etPassword_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:paddingStart="@dimen/_8sdp"
                    android:paddingEnd="@dimen/_8sdp"
                    android:paddingBottom="@dimen/_8sdp"
                    app:boxStrokeColor="@color/LigtGreen"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:startIconTint="@color/LigtGreen"
                    app:endIconMode="password_toggle"
                    app:hintTextColor="@color/colorBlueDark"
                    app:passwordToggleContentDescription="Enter The Correct Password"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/userPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/forgetPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgetPassword"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias=".95"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cv"
            app:layout_constraintVertical_bias=".05"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/userLogin"
            android:layout_width="@dimen/_200sdp"
            android:layout_height="@dimen/_30sdp"
            android:layout_centerVertical="true"
            android:background="@drawable/bt_uidesign"
            android:text="@string/Login"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgetPassword"
            app:layout_constraintVertical_bias="0.102"
            tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/userRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="@string/have_not_account_register"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/loginLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userLogin"
            app:layout_constraintVertical_bias="0"
            tools:ignore="MissingConstraints" />


        <LinearLayout
            android:id="@+id/loginLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="bottom"
            android:orientation="horizontal"
            android:padding="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/userRegister"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/sign_up_by"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:id="@+id/loginFaceBoook"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/facebook"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/loginGoogle"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/google"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/loginTwitter"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_weight="1"
                android:contentDescription="@string/todo"
                android:src="@drawable/twitter"
                tools:ignore="ContentDescription" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
