<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/LigtGreen"
    tools:context=".Activity.Docter.Add_Patient_Activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:elevation="10dp"
            android:theme="@style/ToolbarTheme"
            tools:targetApi="lollipop" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="30dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="8dp"
                app:cardCornerRadius="20dp"
                app:cardElevation="2dp"
                tools:ignore="MissingConstraints">

                <ProgressBar
                    android:id="@+id/progressCircle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@id/cv"
                    app:layout_constraintEnd_toEndOf="@id/cv"
                    app:layout_constraintStart_toStartOf="@id/cv"
                    app:layout_constraintTop_toTopOf="@id/cv"
                    tools:ignore="MissingConstraints" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="8dp">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/user_name"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_person_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/patientName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="User Age"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_account_circle_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/patientAge"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/Email"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_email_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/patientEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textEmailAddress"
                            tools:ignore="TextContrastCheck,TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:hint="@string/phone_number"
                        app:boxStrokeColor="@color/LigtGreen"
                        app:endIconMode="clear_text"
                        app:shapeAppearance="@style/Rounded"
                        app:startIconDrawable="@drawable/ic_baseline_local_phone_24">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/patientPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/choose_gender"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                    <RadioGroup
                        android:id="@+id/radioGroupGender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="8dp"
                        android:background="@drawable/gray_border"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="9dp">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="Male" />


                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:text="Female" />

                    </RadioGroup>

                    <Button
                        android:id="@+id/AddDataPatient"
                        android:layout_width="@dimen/_200sdp"
                        android:layout_height="@dimen/_35sdp"
                        android:layout_gravity="center"
                        android:layout_margin="12dp"
                        android:background="@drawable/bt_uidesign"
                        android:gravity="center"
                        android:text="Continue"
                        android:textAllCaps="false"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TextContrastCheck" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</ScrollView>